--- a/TakeBackChatter/FeedList.xib
+++ b/TakeBackChatter/FeedList.xib
@@ -545,6 +545,14 @@
 					</object>
 					<int key="connectionID">56</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">feedSelectionControl</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="330999385"/>
+					</object>
+					<int key="connectionID">57</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -798,7 +806,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">56</int>
+			<int key="maxID">57</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -938,11 +946,13 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>collectionView</string>
+							<string>feedSelectionControl</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>CollectionViewFeed</string>
+							<string>NSSegmentedControl</string>
 							<string>NSWindow</string>
 						</object>
 					</object>
@@ -951,6 +961,7 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>collectionView</string>
+							<string>feedSelectionControl</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -958,6 +969,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">collectionView</string>
 								<string key="candidateClassName">CollectionViewFeed</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">feedSelectionControl</string>
+								<string key="candidateClassName">NSSegmentedControl</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">window</string>
